Added so that /movies/ shows a list of available endpoints to make the URLs hackable up to the tree + added a /movies/random endpoint
